<resources>
    <string name="app_name">ITIS Android Tasks</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="cancel_deletion">Cancel deletion?</string>
    <string name="yes">YES</string>
    <string name="there_is_no_such_holder">There is no such holder.</string>
    <string name="this_fields_should_not_be_empty">This fields should not be empty</string>
    <string name="there_is_no_such_user_please_register_in">There is no such user. Please register in</string>
    <string name="are_you_sure_you_want_to_delete_your_current_account">Are you sure you want to delete your current account?</string>
    <string name="no">NO</string>
    <string name="favorite">Favourite</string>
    <string name="unfavorite">Unfavourite</string>
    <string name="no_ratings">There are no ratings</string>
    <string name="rating_display">Rating: %1$s</string>
    <string name="user_with_such_phone_number_is_currently_exists">User with such phone number is currently exists</string>
    <string name="this_is_not_correct_phone">This is not correct phone</string>
    <string name="you_should_enter_your_current_password">You should enter your current password</string>
    <string name="you_entered_wrong_password">You entered wrong password</string>
    <string name="you_should_enter_your_new_password_to_change">You should enter your new password to change</string>
    <string name="passwords_doesn_t_match">Passwords doesn\'t match</string>
    <string name="this_is_not_correct_email">This is not correct email</string>
    <string name="user_with_such_email_is_currently_exists">User with such email is currently exists</string>
    <string name="your_passwords_don_t_match">Your passwords don\'t match</string>
    <string name="you_should_fill_all_the_fields">You should fill all the fields</string>
    <string name="this_user_currently_exists_please_log_in">This user currently exists. Please log in</string>
    <string name="your_account_was_deleted_do_you_want_to_restore_your_account">Your account was deleted. Do you want to restore your account?</string>
    <string name="restore">RESTORE</string>
    <string name="delete_permanently">DELETE PERMANENTLY</string>
    <string name="this_film_currently_exists">This film currently exists</string>
    <string name="you_successfully_added_this_film">You successfully added this film!</string>
    <string name="film_name">Film Name</string>
    <string name="rating">Rating:</string>
    <string name="film_date">Film Date</string>
    <string name="film_description">Film Description</string>
    <string name="favourite">Favourite</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authorize">Authorize</string>
    <string name="new_here">New here?</string>
    <string name="register">Register</string>
    <string name="film_catalog">Film Catalog</string>
    <string name="date_of_release_desc">Date of release desc</string>
    <string name="there_are_no_films_yet">There are no films yet</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="apply_changes">Apply changes</string>
    <string name="add_film">Add film</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign in</string>
    <string name="this_phone_is_currently_in_use">This phone is currently in use.</string>
    <string name="this_email_is_currently_in_use">This email is currently in use.</string>

    <string-array name="ordering_types">
        <item>Date of release desc</item>
        <item>Date of release asc</item>
        <item>Rating desc</item>
        <item>Rating asc</item>
    </string-array>
</resources>